# pygrader-ws

./: .gitignore  README.md  config.ini  init.sh  pyproject.toml  wsgi.ini
ca-tools/: .gitignore  README.md
ca-tools/conf/: openssl-client.cnf  openssl-intr.cnf  openssl-root.cnf  openssl-serv.cnf
ca-tools/ext/: README.md  init-db.sh
ca-tools/ext/conf/: example.env  openssl-ca-intr.cnf.example  openssl-ca-root.cnf.example  openssl-serv.cnf.example
docker/: docker-compose.yml  mysql.env
pygrader-client/: pyproject.toml  test_client.py
pygrader-client/pygrader/: client.py  crypto.py  models.py
pygrader-client/test/: test_client.py
pygrader-webserver/: .gitignore  go.mod  go.sum  main.go
pygrader-webserver/conf/: app.conf.example
pygrader-webserver/controllers/: group.go  helper.go  module.go  question.go  uploader.go  user.go
pygrader-webserver/models/: answer.go  group.go  groupanswer.go  helper.go  module.go  question.go  user.go  usergroup.go
pygrader-webserver/routers/: commentsRouter.go  router.go
pygrader-webserver/tests/: default_test.go
pygrader-webserver/uti/: crypto.go  err.go  sanitze.go
src/ws/: __init__.py  crypto.py  db.py  grader.py  question.py  reset.sql  schema.sql  submission.py  user.py  wsgi.py
src/ws/blueprints/grader/: MODELS.md  answer.py  crypto.py  group.py  models.py  module.py  question.py  user.py
src/ws/blueprints/jwt/: auth.py
tests/: test_register.py
