[project]
name = "ws"
version = "1.0.0"
authors = [ { name = "Swiss Data Science Center", email="eric.bouillet@epfl.ch" }, ]
description = "Online python grader system"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "ws",
    "uwsgi",
    "dill",
    "cryptography"
]

[project.urls]
Homepage = "https://github.com/erbou/pygrader-ws.git"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
